# fstl

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: linux.yml
app/: Info.plist  fstl.icns  package.sh
exe/: fstl.rc  package.sh
gl/: calc_altitudes.glsl  colored_lines.vert  cutting_quad.frag  gl.qrc  mesh.frag  mesh.vert  mesh_light.frag  mesh_light_120.frag  mesh_surfaceangle.frag  mesh_wireframe.frag  quad.frag  quad.vert  sphere.stl
qt/: fstl.pro  qt.qrc  style.qss
src/: app.cpp  app.h  axis.cpp  axis.h  backdrop.cpp  backdrop.h  canvas.cpp  canvas.h  fstl.pro  glmesh.cpp  glmesh.h  loader.cpp  loader.h  main.cpp  mesh.cpp  mesh.h  resources.qrc  shaderlightprefs.cpp  shaderlightprefs.h  style.qss  vertex.h  window.cpp  window.h
xdg/: README.txt  fstlapp-fstl.desktop  xdg_install.sh  xdg_package_install.sh  xdg_uninstall.sh
